WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159236
Web Inspector: Show Shadow Root type in DOM Tree
https://bugs.webkit.org/show_bug.cgi?id=159236
Summary
Web Inspector: Show Shadow Root type in DOM Tree
Joseph Pecoraro
Reported
2016-06-28 16:45:35 PDT
Summary: Show Shadow Root type in DOM Tree Test: <input id="host-user-agent" controls> <div id="host-closed"></div> <div id="host-open"></div> <div id="no-host"></div> <script> (function() { var shadowRootClosed = document.getElementById("host-closed").attachShadow({mode: "closed"}); shadowRootClosed.appendChild(document.createTextNode("closed")); var shadowRootOpen = document.getElementById("host-open").attachShadow({mode: "open"}); shadowRootOpen.appendChild(document.createTextNode("open")); })(); </script> Steps to Reproduce: 1. Inspect test case 2. Expand all nodes in the DOM Tree => Should see different types of Shadow Roots under the different shadow host elements (UserAgent, Closed, and Open)
Attachments
[PATCH] Proposed Fix
(16.41 KB, patch)
2016-06-28 16:50 PDT
,
Joseph Pecoraro
timothy
: review+
Details
Formatted Diff
Diff
[IMAGE] Before
(118.44 KB, image/png)
2016-06-28 16:51 PDT
,
Joseph Pecoraro
no flags
Details
[IMAGE] After
(119.79 KB, image/png)
2016-06-28 16:51 PDT
,
Joseph Pecoraro
no flags
Details
[PATCH] Proposed Fix
(16.56 KB, patch)
2016-06-29 11:05 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-06-28 16:45:59 PDT
<
rdar://problem/27068521
>
Joseph Pecoraro
Comment 2
2016-06-28 16:50:47 PDT
Created
attachment 282300
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2016-06-28 16:51:05 PDT
Created
attachment 282301
[details]
[IMAGE] Before
Joseph Pecoraro
Comment 4
2016-06-28 16:51:16 PDT
Created
attachment 282302
[details]
[IMAGE] After
Timothy Hatcher
Comment 5
2016-06-29 09:58:29 PDT
Comment on
attachment 282300
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=282300&action=review
> Source/WebInspectorUI/UserInterface/Views/DOMTreeElement.js:61 > + case WebInspector.DOMNode.ShadowRootType.Open: > + return "open"; > + case WebInspector.DOMNode.ShadowRootType.Closed: > + return "closed";
Title case? Localized?
Joseph Pecoraro
Comment 6
2016-06-29 11:05:48 PDT
Created
attachment 282360
[details]
[PATCH] Proposed Fix I changed to UIString names. I was making them "open" and "closed" to match the {mode: <mode>} name. But I guess we localize names in other places.
WebKit Commit Bot
Comment 7
2016-06-29 11:36:52 PDT
Comment on
attachment 282360
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 282360 Committed
r202634
: <
http://trac.webkit.org/changeset/202634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug