Web Inspector: Show Shadow Root type in DOM Tree https://bugs.webkit.org/show_bug.cgi?id=159236 <rdar://problem/27068521>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-06-29
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* inspector/protocol/DOM.json:
Include optional shadowRootType property for DOMNodes.

Source/WebCore:

Test: inspector/dom/shadowRootType.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::shadowRootType):
(WebCore::InspectorDOMAgent::buildObjectForNode):
Set the shadowRootType property when a node is a ShadowRoot.

Source/WebInspectorUI:

* Localizations/en.lproj/localizedStrings.js:
"Shadow Content (type)" string.

* UserInterface/Models/DOMNode.js:
(WebInspector.DOMNode):
(WebInspector.DOMNode.prototype.shadowRoots):
(WebInspector.DOMNode.prototype.shadowRootType):
Initialize state and add accessors.

* UserInterface/Views/DOMTreeElement.js:
(WebInspector.DOMTreeElement.shadowRootTypeDisplayName):
(WebInspector.DOMTreeElement.prototype._nodeTitleInfo):
Better string when an element is a Shadow Root.

* UserInterface/Views/DOMTreeElementPathComponent.js:
(WebInspector.DOMTreeElementPathComponent):
Better to check the Shadow Root type.

* UserInterface/Views/DOMTreeOutline.css:
(.tree-outline.dom .html-fragment.shadow):
Opacity looks poor when there is a selection. Switch to gray.

LayoutTests:

* inspector/dom/shadowRootType-expected.txt: Added.
* inspector/dom/shadowRootType.html: Added.

Canonical link: https://commits.webkit.org/177380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202634 268f45cc-cd09-0410-ab3c-d52691b4dbfc