Source/WebInspectorUI/UserInterface/Views/DOMTreeElementPathComponent.js
@@ -72,7 +72,7 @@ WebInspector.DOMTreeElementPathComponent = class DOMTreeElementPathComponent ext
             // FIXME: At some point we might want a different icon for this.
             // <rdar://problem/12800950> Need icon for DOCUMENT_FRAGMENT_NODE and PROCESSING_INSTRUCTION_NODE
             className = WebInspector.DOMTreeElementPathComponent.DOMDocumentTypeIconStyleClassName;
-            if (node.isInShadowTree())
+            if (node.shadowRootType())
                 title = WebInspector.UIString("Shadow Content");
             else
                 title = WebInspector.displayNameForNode(node);
